--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -7,6 +7,7 @@
     --h4: 1.563em;
     --h5: 1.25em;
     --smallText: 0.9em;
+    --xsmallText: 0.2em;
     --headingFontFamily: ivymode;
     --bodyFontFamily: le-monde-livre-std;
 }
@@ -34,6 +35,10 @@ h5 {
 
 .text_small {
     font-size: var(--smallText);
+}
+
+.text_xsmall {
+    font-size: var(--xsmallText);
 }
 
 .underline {
